# AIDA

./: .gitignore  AGENTS.md  FEATURES.md  PRODUCTION.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: chat.py  documents.py  health.py
backend/app/core/: config.py  langfuse.py
backend/app/schemas/: __init__.py
backend/app/services/: ai_service.py  document_service.py
backend/eval/: __init__.py  dataset.py  metrics.py  run_eval.py
backend/eval_ragas/: __init__.py  metrics.py  run_eval.py
backend/eval_ragas/results/: .gitkeep
backend/tests/: conftest.py  test_ai_service.py  test_document_service.py
frontend/: Dockerfile  package-lock.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: OnboardingTour.tsx  UserIdGate.tsx
frontend/src/pages/: ChatPage.tsx  UploadPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
