[project]
name = "aida-backend"
version = "0.1.0"
description = "AIDA - AI Document Assistant"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # Document parsing
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    # Embeddings + LLM
    "openai>=1.30.0",
    # Vector store
    "pinecone>=5.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
